--- a/cmd/stream-prediction-controller/resources/service.tmpl
+++ b/cmd/stream-prediction-controller/resources/service.tmpl
@@ -4,6 +4,13 @@ metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
   labels:
     run: "{{.Spec.StreamDataSpec.StreamName}}"
+  ownerReferences:
+  - apiVersion: {{.APIVersion}}
+    kind: {{.Kind}}
+    name: {{.Name}}
+    uid: {{.UID}}
+    controller: {{.Controller}}
+    blockOwnerDeletion: {{.BlockOwnerDeletion}}
 spec:
   selector:
     run: "{{.Spec.StreamDataSpec.StreamName}}"
