--- a/cmd/stream-prediction-controller/resources/deployment.tmpl
+++ b/cmd/stream-prediction-controller/resources/deployment.tmpl
@@ -100,7 +100,7 @@ spec:
         - name: AWS_PREDICT_LOGS_PATH
           value: "{{.Spec.StreamDataSpec.AWSPath}}"
         - name: AWS_DEFAULT_REGION
-          value: "{{.Spec.StreamDataSpec.StreamName}}"
+          value: "{{.Spec.StreamDataSpec.AWSDefaultRegion}}"
         volumeMounts:
         - name: code
           mountPath: /code/
