--- a/cmd/stream-prediction-controller/resources/deployment.tmpl
+++ b/cmd/stream-prediction-controller/resources/deployment.tmpl
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
+  namespace: "{{.ObjectMeta.Namespace}}"
   ownerReferences:
   - apiVersion: {{.APIVersion}}
     kind: {{.Kind}}
