--- a/cmd/stream-prediction-controller/resources/hpa.tmpl
+++ b/cmd/stream-prediction-controller/resources/hpa.tmpl
@@ -2,6 +2,7 @@ apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
+  namespace: "{{.ObjectMeta.Namespace}}"
   ownerReferences:
   - apiVersion: {{.APIVersion}}
     kind: {{.Kind}}
