--- a/cmd/stream-prediction-controller/resources/ingress.tmpl
+++ b/cmd/stream-prediction-controller/resources/ingress.tmpl
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
+  namespace: "{{.ObjectMeta.Namespace}}"
   annotations:
     kubernetes.io/ingress.class: "nginx"
   ownerReferences:
