--- a/cmd/stream-prediction-controller/resources/service.tmpl
+++ b/cmd/stream-prediction-controller/resources/service.tmpl
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
+  namespace: "{{.ObjectMeta.Namespace}}"
   labels:
     run: "{{.Spec.StreamDataSpec.StreamName}}"
   ownerReferences:
