--- a/cmd/stream-prediction-controller/resources/deployment.tmpl
+++ b/cmd/stream-prediction-controller/resources/deployment.tmpl
@@ -44,8 +44,21 @@ spec:
           # TODO(niklas): add support for resource limits.
           requests:
 {{ range $resource, $request := .Spec.ResourceSpec.Requests }}
-            "{{ $resource }}": "{{ $request }}"
+            "{{ $resource }}": "{{ ResourceString $request }}"
 {{ end }}
+
+          # This is necessary because the alpha GPU support in Kubernetes
+          # does not correctly assign a device to the container unless
+          # present in limits.
+          #
+          # TODO(connor): make this generic again when the behavior is fixed
+          #               upstream.
+{{ $gpu_request := index .Spec.ResourceSpec.Requests "alpha.kubernetes.io/nvidia-gpu" }}
+{{if $gpu_request }}
+          limits:
+            "alpha.kubernetes.io/nvidia-gpu": "{{ ResourceString $gpu_request }}"
+{{end}}
+
         env:
         - name: PRESIGNED_TOKEN
           value: "{{.Spec.SecuritySpec.PresignedToken}}"
