--- a/cmd/stream-prediction-controller/resources/ingress.tmpl
+++ b/cmd/stream-prediction-controller/resources/ingress.tmpl
@@ -14,7 +14,7 @@ metadata:
     blockOwnerDeletion: {{.BlockOwnerDeletion}}
 spec:
   rules:
-  - host: "stream.nervanasys.com"
+  - host: {{ GlobalTemplateValue "INGRESS_HOST" }}
     http:
       paths:
       - path: /api/v1/predictions/stream/"{{.Spec.SecuritySpec.PresignedToken}}"
