--- a/cmd/stream-prediction-controller/resources/ingress.tmpl
+++ b/cmd/stream-prediction-controller/resources/ingress.tmpl
@@ -17,7 +17,7 @@ spec:
   - host: {{ GlobalTemplateValue "INGRESS_HOST" }}
     http:
       paths:
-      - path: /api/v1/predictions/stream/"{{.Spec.SecuritySpec.PresignedToken}}"
+      - path: "/api/v1/predictions/stream/{{.Spec.SecuritySpec.PresignedToken}}"
         backend:
           serviceName: "{{.Spec.StreamDataSpec.StreamName}}"
           servicePort: 80
