Adds minReadySeconds to the deployment template. (#56)
- Makes sure the pod runs for a certain seconds after it starts for it to be considered ready.

--- a/cmd/stream-prediction-controller/resources/deployment.tmpl
+++ b/cmd/stream-prediction-controller/resources/deployment.tmpl
@@ -12,6 +12,7 @@ metadata:
     blockOwnerDeletion: {{.BlockOwnerDeletion}}
 spec:
   replicas: 1
+  minReadySeconds: 60
   template:
     metadata:
       labels:
