--- a/cmd/model-training-controller/resources/job.tmpl
+++ b/cmd/model-training-controller/resources/job.tmpl
@@ -81,6 +81,8 @@ spec:
           value: "/datasets"
         - name: CMD
           value: "{{ .Spec.ContainerSpec.Command }}"
+        - name: JWT_TOKEN
+          value: "{{ .Spec.JWTToken }}"
       - name: model-sidecar
         image: "{{ .Spec.ContainerSpec.SidecarImage }}"
         imagePullPolicy: Always
