Roll-up pod/container error statuses to sub-resource. (#78)
- Added new pod resource client.
- Added e2e in stream prediction.

--- a/cmd/stream-prediction-controller/resources/deployment.tmpl
+++ b/cmd/stream-prediction-controller/resources/deployment.tmpl
@@ -3,6 +3,10 @@ kind: Deployment
 metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
   namespace: "{{.ObjectMeta.Namespace}}"
+  labels:
+    run: "{{.Spec.StreamDataSpec.StreamName}}"
+    type: stream
+    id: "{{.Spec.StreamDataSpec.StreamID}}"
   ownerReferences:
   - apiVersion: {{.APIVersion}}
     kind: {{.Kind}}
