Make e2e integration test work with Helium, CRD, Controllers and CircleCI. (#90)
* Adding a class for the ingress object

* Removing readiness probe in the krypton container, changing the default host, correcting the json spec. Removing actions in add and update related to spec being completed for mt

* Fixing reconciler status change, mt e2e test, adding job_client isCompleted, copying object before adding to list in all List() of resourceClients. Fixing stream prediction env vars to work with krypton master.

* Considering pod failed statuses in the job client

* Added e2e test for mt pod fail.

* Added e2e test for mt pod fail. Bumping up sidecar resource spec

* Adding continuations3URL

* Fix e2e test for mt pod fail.

--- a/cmd/model-training-controller/resources/job.tmpl
+++ b/cmd/model-training-controller/resources/job.tmpl
@@ -3,6 +3,11 @@ kind: Job
 metadata:
   name: "{{.ObjectMeta.Name}}"
   namespace: "{{.ObjectMeta.Namespace}}"
+  labels:
+    run: "{{.ObjectMeta.Name}}"
+    type: model-training
+    jobid: "{{.Spec.JobID}}"
+    tenantid: "{{.Spec.TenantID}}"
   ownerReferences:
   - apiVersion: {{.APIVersion}}
     kind: {{.Kind}}
@@ -86,11 +91,11 @@ spec:
         imagePullPolicy: Always
         resources:
           limits:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 200m
+            memory: 400Mi
           requests:
-            cpu: 100m
-            memory: 100Mi
+            cpu: 200m
+            memory: 400Mi
         volumeMounts:
         - name: code
           mountPath: /code/
@@ -121,6 +126,8 @@ spec:
             value: "/datasets"
           - name: STOCKDATA_DIR
             value: "/var/neon/datasets"
+          - name: CONTINUATION_S3_URL
+            value: "{{ .Spec.ContinuationS3URL }}"
       - name: nfl
         image: "{{ .Spec.ContainerSpec.NFLImage }}"
         imagePullPolicy: Always
