--- a/cmd/stream-prediction-controller/resources/ingress.tmpl
+++ b/cmd/stream-prediction-controller/resources/ingress.tmpl
@@ -4,7 +4,7 @@ metadata:
   name: "{{.Spec.StreamDataSpec.StreamName}}"
   namespace: "{{.ObjectMeta.Namespace}}"
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: "nginx-{{.ObjectMeta.Namespace}}"
   ownerReferences:
   - apiVersion: {{.APIVersion}}
     kind: {{.Kind}}
@@ -14,7 +14,7 @@ metadata:
     blockOwnerDeletion: {{.BlockOwnerDeletion}}
 spec:
   rules:
-  - host: {{ GlobalTemplateValue "INGRESS_HOST" }}
+  - host: "stream.nervanasys.com"
     http:
       paths:
       - path: "/api/v1/predictions/stream/{{.Spec.SecuritySpec.PresignedToken}}"
