Updating job.tmpl (#95)

--- a/cmd/model-training-controller/resources/job.tmpl
+++ b/cmd/model-training-controller/resources/job.tmpl
@@ -41,7 +41,7 @@ spec:
       - name: datasets
       - name: stock-dataset
         hostPath:
-          path: /stock-dataset
+          path: /var/neon/stock-datasets
       imagePullSecrets:
         - name: dockerhub
       containers:
